<?xml version="1.0"?>
<package format="2">
  <name>fh_optoforce_config</name>
  <version>0.0.1</version>
  <description>The fh_optoforce_config package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
